[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/assets/font_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/assets/font_default.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/assets/re.png" type="Texture" id=4]
[ext_resource path="res://src/levels/gircikdemo.gd" type="Script" id=5]
[ext_resource path="res://src/assets/arrow.png" type="Texture" id=6]
[ext_resource path="res://src/assets/portal.png" type="Texture" id=7]
[ext_resource path="res://src/assets/about.png" type="Texture" id=8]
[ext_resource path="res://src/assets/enemy.png" type="Texture" id=9]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 8.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.00320513
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.657
margin_top = -178.285
margin_right = 661.651
margin_bottom = 301.715
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
light_mask = 0
anchor_left = 0.5
anchor_right = 0.614
anchor_bottom = 0.122
margin_left = 20.6121
margin_top = 36.9288
margin_right = 96.18
margin_bottom = -0.271477
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
text = "2dplat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.505
anchor_top = 0.717
anchor_right = 0.571
anchor_bottom = 0.841
margin_left = -41.68
margin_top = -73.2
margin_right = 46.5439
margin_bottom = 59.4
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_left = 0.623
anchor_right = 0.758
anchor_bottom = 0.852
margin_left = 139.064
margin_top = 379.0
margin_right = 131.744
margin_bottom = 6.79996
rect_rotation = 90.0
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
anchor_left = 0.88
anchor_right = 1.0
anchor_bottom = 0.204
margin_left = 5.08752
margin_top = 13.8487
margin_right = -6.75244
margin_bottom = -2.55095
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="Button" parent="."]
anchor_right = 0.125
anchor_bottom = 0.196
margin_left = 17.0044
margin_top = 11.5734
margin_right = 0.00439453
margin_bottom = -0.0261536
toggle_mode = true
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resetlevel" type="Button" parent="."]
anchor_top = 0.881
anchor_right = 0.121
anchor_bottom = 1.0
margin_left = 35.7858
margin_top = -45.651
margin_right = -0.0860062
margin_bottom = -26.051
toggle_mode = true
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
light_mask = 0
margin_left = 256.0
margin_top = 181.0
margin_right = 770.0
margin_bottom = 518.0
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog"]
margin_left = 10.0
margin_top = 6.0
margin_right = 505.0
margin_bottom = 331.0
focus_mode = 2
text = "
	author : bymfd(Mevl√ºt Furkan Demir )
	
	author site: https://bymfd.github.io
	
	project :https://github.com/bymfd/2dplat
	
	Thanks
	
	music: http://soundcloud.com/mutkanto
	
	
	
	game engine: Godot Engine
	
"
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 10 )
is_real = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="resetlevel" to="." method="_on_resetlevel_pressed"]
